RESOLVED FIXED201038
[Subpixel layout] Bad scrolling on mercurynews.com article
https://bugs.webkit.org/show_bug.cgi?id=201038
Summary [Subpixel layout] Bad scrolling on mercurynews.com article
alan
Reported 2019-08-22 08:44:11 PDT
Attachments
Patch (5.52 KB, patch)
2019-08-22 08:56 PDT, alan
no flags
Patch (5.59 KB, patch)
2019-08-22 09:21 PDT, alan
no flags
Archive of layout-test-results from webkit-cq-01 for mac-highsierra (1.36 MB, application/zip)
2019-08-22 10:05 PDT, WebKit Commit Bot
no flags
Archive of layout-test-results from ews214 for win-future (13.56 MB, application/zip)
2019-08-22 10:25 PDT, EWS Watchlist
no flags
Patch (157.11 KB, patch)
2019-08-22 14:46 PDT, alan
no flags
Patch (161.54 KB, patch)
2019-08-22 15:29 PDT, alan
no flags
Archive of layout-test-results from ews212 for win-future (5.11 MB, application/zip)
2019-08-22 16:40 PDT, EWS Watchlist
no flags
Patch (174.07 KB, patch)
2019-08-22 19:33 PDT, alan
no flags
Archive of layout-test-results from ews213 for win-future (13.52 MB, application/zip)
2019-08-22 20:33 PDT, EWS Watchlist
no flags
Patch (360.28 KB, patch)
2019-08-23 10:44 PDT, alan
no flags
Archive of layout-test-results from ews212 for win-future (5.41 MB, application/zip)
2019-08-23 11:49 PDT, EWS Watchlist
no flags
Patch (25.23 MB, patch)
2019-08-27 11:35 PDT, alan
no flags
Patch (1.80 MB, patch)
2019-08-27 14:08 PDT, alan
no flags
Patch (1010.17 KB, patch)
2019-08-27 15:34 PDT, alan
no flags
Patch (329.39 KB, patch)
2020-05-22 09:43 PDT, alan
no flags
Patch (366.65 KB, patch)
2020-05-23 12:12 PDT, alan
no flags
Patch (372.14 KB, patch)
2020-05-23 13:46 PDT, alan
no flags
Patch (377.05 KB, patch)
2020-05-23 15:58 PDT, alan
no flags
Patch (377.05 KB, patch)
2020-05-23 18:35 PDT, alan
no flags
Patch (411.13 KB, patch)
2020-05-24 12:42 PDT, alan
no flags
Patch (513.78 KB, patch)
2020-05-24 15:57 PDT, alan
no flags
Patch (517.34 KB, patch)
2020-05-24 17:56 PDT, alan
no flags
alan
Comment 1 2019-08-22 08:56:45 PDT
alan
Comment 2 2019-08-22 09:21:17 PDT
WebKit Commit Bot
Comment 3 2019-08-22 10:05:34 PDT
Comment on attachment 377016 [details] Patch Rejecting attachment 377016 [details] from commit-queue. Number of test failures exceeded the failure limit. Full output: https://webkit-queues.webkit.org/results/12956956
WebKit Commit Bot
Comment 4 2019-08-22 10:05:35 PDT
Created attachment 377020 [details] Archive of layout-test-results from webkit-cq-01 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-highsierra Platform: Mac OS X 10.13.6
alan
Comment 5 2019-08-22 10:08:10 PDT
(In reply to WebKit Commit Bot from comment #3) > Comment on attachment 377016 [details] > Patch > > Rejecting attachment 377016 [details] from commit-queue. > > Number of test failures exceeded the failure limit. > Full output: https://webkit-queues.webkit.org/results/12956956 Oh right. It needs some massive rebaselining. It's been a while...
EWS Watchlist
Comment 6 2019-08-22 10:25:15 PDT
Comment on attachment 377016 [details] Patch Attachment 377016 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12956961 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 7 2019-08-22 10:25:27 PDT
Created attachment 377024 [details] Archive of layout-test-results from ews214 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews214 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
alan
Comment 8 2019-08-22 14:46:19 PDT
alan
Comment 9 2019-08-22 14:46:48 PDT
(In reply to zalan from comment #8) > Created attachment 377049 [details] > Patch ^^ macOS only. iOS needs rebaselining as well.
alan
Comment 10 2019-08-22 15:29:35 PDT
EWS Watchlist
Comment 11 2019-08-22 16:40:24 PDT
Comment on attachment 377060 [details] Patch Attachment 377060 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12958368 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 12 2019-08-22 16:40:26 PDT
Created attachment 377074 [details] Archive of layout-test-results from ews212 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews212 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
alan
Comment 13 2019-08-22 19:33:47 PDT
EWS Watchlist
Comment 14 2019-08-22 20:33:47 PDT
Comment on attachment 377092 [details] Patch Attachment 377092 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12959243 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 15 2019-08-22 20:33:49 PDT
Created attachment 377097 [details] Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
alan
Comment 16 2019-08-23 10:44:27 PDT
EWS Watchlist
Comment 17 2019-08-23 11:49:16 PDT
Comment on attachment 377134 [details] Patch Attachment 377134 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12961557 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 18 2019-08-23 11:49:18 PDT
Created attachment 377144 [details] Archive of layout-test-results from ews212 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews212 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
alan
Comment 19 2019-08-27 11:35:19 PDT
alan
Comment 20 2019-08-27 14:08:29 PDT
alan
Comment 21 2019-08-27 15:34:33 PDT
alan
Comment 22 2020-05-22 09:43:40 PDT
alan
Comment 23 2020-05-23 12:12:25 PDT
alan
Comment 24 2020-05-23 13:46:38 PDT
alan
Comment 25 2020-05-23 15:58:43 PDT
alan
Comment 26 2020-05-23 18:35:29 PDT
alan
Comment 27 2020-05-24 12:42:47 PDT
alan
Comment 28 2020-05-24 15:57:59 PDT
alan
Comment 29 2020-05-24 17:56:03 PDT
EWS
Comment 30 2020-05-25 09:41:45 PDT
Committed r262127: <https://trac.webkit.org/changeset/262127> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400183 [details].
Note You need to log in before you can comment on or make changes to this bug.