Source/WebCore/rendering/RootInlineBox.cpp
@@ -892,7 +892,7 @@ void RootInlineBox::ascentAndDescentForBox(InlineBox& box, GlyphOverflowAndFallb
     if (box.renderer().isReplaced()) {
         if (lineStyle().lineBoxContain().contains(LineBoxContain::Replaced)) {
             ascent = box.baselinePosition(baselineType());
-            descent = box.lineHeight() - ascent;
+            descent = roundToInt(box.lineHeight()) - ascent;
             
             // Replaced elements always affect both the ascent and descent.
             affectsAscent = true;
